# router/app.go
@@ -25,6 +25,7 @@ func InitRouter() *gin.Engine {
 	r.GET("/user-detail", service.GetUserDetail)
 	r.POST("/login", service.Login)
 	r.POST("/send-code", service.SendCode)
+	r.POST("/register", service.Register)
 
 	//提交记录
 	r.GET("/submit-list", service.GetSubmitList)
